--- a/python/notebooks/14_COVID_inference.ipynb
+++ b/python/notebooks/14_COVID_inference.ipynb
@@ -32,8 +32,7 @@
     "<br>\n",
     "\n",
     "## Step 0. Initialization\n",
-    "\n",
-    "The first thing we need to do when working with pyhelayers is to import the library and  initialize the different data objects. Then create an instance of a Context which is the main HElayers object to be able to work with encrypted data. We initialize the context object with a settings profile that helps to define the various configuration settings that are needed to run. "
+    "Import libraries and setup some environment variables."
    ]
   },
   {
@@ -51,8 +50,14 @@
     "\n",
     "utils.verify_memory(min_memory_size=25)\n",
     "\n",
-    "input_dir = utils.get_data_sets_dir() + \"/covid_inference/\" # for the model\n",
-    "\n"
+    "input_dir = utils.get_data_sets_dir() + \"/covid_inference/\" # for the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We set the HeRunRequirements parameters, load and encode the model, and obtain the HeContext with keys from it."
    ]
   },
   {
@@ -61,38 +66,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### Load the NN model weights\n",
+    "#### Encode the NN model weights\n",
     "# The neural network consists of 3 convolutional layers and 2 fully connected layers\n",
-    "\n",
-    "hyper_params = pyhelayers.PlainModelHyperParams()\n",
-    "nnp = pyhelayers.NeuralNetPlain()\n",
-    "nnp.init_from_files(hyper_params, [input_dir + \"model.json\", input_dir + \"model.h5\"])\n",
-    "print(\"Loaded plain model\")\n",
-    "\n",
     "# Labels of inference results: \n",
     "labels = ['Pneumonia','Healthy','COVID19']\n",
     "\n",
     "#### Automatic optimization\n",
     "# For the given model, we optimize the underlying FHE library's parameter, and various parameters related to the inference algorithm.\n",
-    "\n",
     "he_run_req = pyhelayers.HeRunRequirements()\n",
     "he_run_req.set_he_context_options([pyhelayers.DefaultContext()])\n",
     "he_run_req.set_model_encrypted(False)\n",
-    "profile = pyhelayers.HeModel.compile(nnp, he_run_req)\n",
     "\n",
-    "batch_size = profile.get_optimal_batch_size()\n",
+    "nn = pyhelayers.NeuralNet()\n",
+    "nn.encode([input_dir + \"model.json\", input_dir + \"model.h5\"], he_run_req)\n",
+    "batch_size = nn.get_profile().get_optimal_batch_size()\n",
     "\n",
-    "#### Context setup\n",
-    "# Here we initialize the library using parameters chosen automatically in the optimization process of the previous step\n",
-    "\n",
-    "context = pyhelayers.HeModel.create_context(profile)\n",
+    "context = nn.get_created_he_context()\n",
     "print('HE Context ready')\n",
     "\n",
     "process = psutil.Process(os.getpid())\n",
-    "print(\"Memory consumption (GB): \", process.memory_info().rss / (1000*1000*1000))\n",
-    "\n",
-    "nn = pyhelayers.NeuralNet(context)\n",
-    "nn.encode(nnp, profile)"
+    "print(\"Memory consumption (GB): \", process.memory_info().rss / (1000*1000*1000))"
    ]
   },
   {
@@ -124,9 +117,9 @@
     "\n",
     "# %%time\n",
     "\n",
-    "iop = nn.create_io_processor()\n",
+    "model_io_encoder = pyhelayers.ModelIoEncoder(nn)\n",
     "samples = pyhelayers.EncryptedData(context)\n",
-    "iop.encode_encrypt_inputs_for_predict(samples, [plain_samples])\n",
+    "model_io_encoder.encode_encrypt(samples, [plain_samples])\n",
     "print('Encrypted samples')\n",
     "\n",
     "process = psutil.Process(os.getpid())\n",
@@ -180,7 +173,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "plain_predictions = iop.decrypt_decode_output(predictions)\n",
+    "plain_predictions = model_io_encoder.decrypt_decode_output(predictions)\n",
     "process = psutil.Process(os.getpid())\n",
     "print(\"Memory consumption (GB): \", process.memory_info().rss / (1000*1000*1000))"
    ]
@@ -191,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"\\033[0;35m Classificaton prediction:\",labels[np.argmax(plain_predictions)],\"\\033[0m\")"
+    "print(f\"\\033[0;35m Classification prediction:\",labels[np.argmax(plain_predictions)],\"\\033[0m\")"
    ]
   },
   {
